--- a/packages/devtools-ui/index.html
+++ b/packages/devtools-ui/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite Solid</title>
+    <title>Wagmi Devtools</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/playground.tsx"></script>
+    <script type="module" src="/playground/main.tsx"></script>
   </body>
 </html>
+
